# fsplit

./: CMakeLists.txt  README.md
include/: combiner.h  splitter.h
src/: combiner.cpp  main.cpp  splitter.cpp
